--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -10,7 +10,7 @@
 
 <ion-content>
 
-  <ion-slides pager (ionSlideDidChange)="slideChanged()" (ionSlideDrag)="slideMoved()">
+  <ion-slides pager>
 
     <ion-slide padding style="background: url('assets/imgs/beleuchtung.jpg')  no-repeat; background-size: 100%  100%">
       <div style="margin-top:90%">
@@ -36,10 +36,13 @@
       </ion-card>
 
       <ion-card>
-        <button ion-item block (click)="openBeleuchtung()">
-          <ion-icon name="power" item-start></ion-icon>
-          Beleuchtung einstellen
-        </button>
+        <ion-item>
+          <button ion-item block (click)="openBeleuchtung()">
+            <ion-icon name="bulb"></ion-icon>
+            <span margin-left>Beleuchtung ein</span>
+          </button>
+        </ion-item>
+
       </ion-card>
 
       <ion-card>
@@ -65,7 +68,7 @@
       <ion-card>
         <ion-item>
           <button ion-item block (click)="openLuftbefeuchter()">
-            <ion-icon name="cloud" ></ion-icon>
+            <ion-icon name="cloud"></ion-icon>
             <ion-icon name="add"></ion-icon>
             <span margin-left>Luftbefeuchter einstellen</span>
           </button>
@@ -75,7 +78,7 @@
       <ion-card>
         <ion-item>
           <button ion-item block (click)="openLufttrockner()">
-            <ion-icon name="cloud-outline" ></ion-icon>
+            <ion-icon name="cloud-outline"></ion-icon>
             <ion-icon name="remove"></ion-icon>
             <span margin-left>Lufttrockner einstellen</span>
           </button>
